--- a/public/courses.html
+++ b/public/courses.html
@@ -1,6 +1,6 @@
 <ad-title>Courses</ad-title>
 
-<style>@import url("/courses.css");</style>
+<style>@import url("/<#? applang ?#>/courses.css");</style>
 
 <div class="header">
     <div class="title">Courses</div>
