--- a/public/pins.html
+++ b/public/pins.html
@@ -1,9 +1,9 @@
-<ad-title>Pins</ad-title>
+<ad-title><$ courses pins /></ad-title>
 
-<style>@import url("/courses.css");</style>
+<style>@import url("/<#? applang ?#>/courses.css");</style>
 
 <div class="header">
-    <div class="title">Pins</div>
+    <div class="title"><$ courses pins /></div>
 </div>
 
 <div class="content">
