--- a/public/print.html
+++ b/public/print.html
@@ -3,7 +3,7 @@
         <img class="logo" src="/assets/logo_fs.png">
 
         <div class="title">
-            <div class="type">Kumpulan Soal</div>
+            <div class="type"><$ topics questionbank /></div>
             <div class="name" id="Text_PrintCourseName"></div>
             <div class="topics" id="Text_PrintTopicName"></div>
         </div>
@@ -19,10 +19,7 @@
             <span class="copyright">
                 © Universitas Katolik Parahyangan
             </span>
-            <span class="disclaimer">
-                Mohon untuk tidak mendistribusikan naskah soal di luar lingkup Universitas Katolik Parahyangan.
-                Pergunakan naskah soal sebagaimana mestinya.
-            </span>
+            <span class="disclaimer"><$ topics questionbank_disclaimer /></span>
         </div>
     </div>
 </div>
