--- a/src/pages/course_404.html
+++ b/src/pages/course_404.html
@@ -1,8 +1,8 @@
 <ad-title>Course Not Found</ad-title>
 
 <style>
-    @import url("/courses.css");
-    @import url("/problems.css");
+    @import url("/<#? applang ?#>/courses.css");
+    @import url("/<#? applang ?#>/problems.css");
 
     .root .main:has(> .activity)
     {
