--- a/src/pages/topic.html
+++ b/src/pages/topic.html
@@ -10,8 +10,8 @@
 
 <div class="header cascaded">
     <div class="buttons">
-        <button class="back" onclick="Topics.Back()">Back</button>
-        <button id="Button_Print" class="icon" ad-tooltip="Print">&#xf948;</button>
+        <button class="back" onclick="Topics.Back()"><$ topics back /></button>
+        <button id="Button_Print" class="icon" ad-tooltip="<$ topics tooltip_print />">&#xf948;</button>
     </div>
     <div class="title hide"></div>
 </div>
